# distributed-task-Q

./: .env  .gitignore  Cargo.toml  README.md  project_prospects.txt
broker/: Cargo.toml
broker/src/: main.rs  state.rs
broker/src/routes/: mod.rs  task.rs  task_routes.rs
common/: Cargo.toml
common/src/: lib.rs
sdk/: Cargo.toml
sdk-ts/: .gitignore  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: index.ts
sdk/src/: client.rs  lib.rs  types.rs
worker/: Cargo.toml
worker/src/: main.rs
worker/src/handler/: config.rs  echo_handler.rs  mod.rs  registry.rs  validate_image_handler.rs  worker.rs
