[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
bytes = "1.6"
base64 = "0.22"
common = { path = "../common" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }